Fix footer spacing issues PERMANENTLY (I think)

--- a/src/components/Footer.module.css
+++ b/src/components/Footer.module.css
@@ -1,7 +1,7 @@
 .footer {
   width: 100%;
   border-top: 1px solid #eaeaea;
-  margin-top: 10%;
+  margin-top: 5%;
   text-align: center;
   padding: 3% 0;
 }
@@ -33,7 +33,7 @@
 
 @media (max-width: 768px) {
   .footer {
-    margin-top: 15%;
+    margin-top: 20%;
     padding: 5% 0;
   }
 
