--- a/src/components/HomeArticleCard.module.css
+++ b/src/components/HomeArticleCard.module.css
@@ -1,6 +1,6 @@
 .card {
   justify-self: center;
-  margin: 1rem;
+  margin: 5%;
   padding-bottom: 1.5rem;
   max-width: 600px;
   color: inherit;
