--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -42,8 +42,10 @@
 
 .homeGrid {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr;
   padding-bottom: 10%;
+  width: 100%;
+  height: 100%;
 }
 
 
@@ -81,11 +83,9 @@
 .contentGrid {
   display: grid;
   grid-template-columns: 1fr;
-  column-gap: 5%;
-  row-gap: 5%; 
 
   margin-top: 3rem;
-  margin-bottom: 30%;
+  margin-bottom: 10%;
 }
 
 
